# DeepResearch

./: .envexamples  .gitignore  LICENSE  README.md  agent_state.py  browser_mcp.json  graph_builder.py  main.py  mcp_server.py  pyproject.toml  requirement.txt  utils.py
nodes/: extract.py  plan.py  rank.py  search.py  write.py
