[project]
name = "deepresearch"
version = "0.1.0"
authour= "Amarachi Njoku"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "mcp-client>=0.0.0",
    "mcp-use>=1.3.10",
    "mcp[cli]>=1.13.1",
    "npm>=0.1.1",
    "nxp>=0.3.1",
]
